--- a/index.html
+++ b/index.html
@@ -1,81 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/styles.css">
+
   <title>Frontend Mentor | Recipe page</title>
 
- 
+
 </head>
+
 <body>
-<div>
-  <img src="assets/images/image-omelette.jpeg" alt="main-image">
-  <h1>Simple Omelette Recipe</h1>
-  <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-    to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-  </p>
-  <div>
-    <span>Preparation time</span>
-    <ul>
-      <li> Total: Approximately 10 minutes</li>
-      <li>Preparation: 5 minutes</li>
-      <li>Cooking: 5 minutes</li>
-    </ul>
+  <div class="all">
+    <img src="assets/images/image-omelette.jpeg" alt="main-image">
+    <h1 class="text-xxl">Simple Omelette Recipe</h1>
+    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+      to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    </p>
+    <div class="div-1">
+      <p class="p-main text-md">Preparation time</p>
+      <ul>
+        <li> <b>Total:</b> Approximately 10 minutes</li>
+        <li><b>Preparation: </b>5 minutes</li>
+        <li><b>Cooking:</b> 5 minutes</li>
+      </ul>
+    </div>
+    <section class="section-1">
+      <h5 class="text-xl">Ingredients</h5>
+      <ul>
+        <li>2-3 large eggs</li>
+        <li>Salt, to taste</li>
+        <li>Pepper, to taste</li>
+        <li>1 tablespoon of butter or oil</li>
+        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      </ul>
+    </section>
+    <hr>
+    <section>
+      <p class="text-xl">Instructions</p>
+      <ol>
+        <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed.
+          You can add a tablespoon of water or milk for a fluffier texture.</li>
+        <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+        <li>Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure
+          the eggs evenly coat the surface.</li>
+        <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the
+          middle, sprinkle your chosen fillings over one half of the omelette.
+        </li>
+        <li>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the
+          fillings. Let it cook for another minute, then slide it onto a plate.</li>
+        <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+      </ol>
+    </section>
+    </section>
+    <hr>
+    <section>
+      <p class="text-xl">Nutrition</p>
+      <p>The table below shows nutritional values per serving without the additional fillings.
+      </p>
+      <table>
+        <tr>
+          <td>Calories</td>
+          <td>277kcal</td>
+        </tr>
+        <tr>
+          <td>Cabs</td>
+          <td>0g</td>
+        </tr>
+        <tr>
+          <td>Protein</td>
+          <td>20g</td>
+        </tr>
+        <tr>
+          <td>Fat</td>
+          <td>22g</td>
+        </tr>
+      </table>
+    </section>
   </div>
-  <section>
-    <h5>Ingredients</h5>
-    <ul>
-      <li>2-3 large eggs</li>
-      <li>Salt, to taste</li>
-      <li>Pepper, to taste</li>
-      <li>1 tablespoon of butter or oil</li>
-      <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-    </ul>
-  </section>
-  <section>
-    <h5>Instructions</h5>
-    <p>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-      You can add a tablespoon of water or milk for a fluffier texture.
-    </p>
-    <p>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</p>
-    <p>Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-      the eggs evenly coat the surface.
-    </p>
-    <p>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-      middle, sprinkle your chosen fillings over one half of the omelette.
-    </p>
-    <p>Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-      fillings. Let it cook for another minute, then slide it onto a plate.
-    </p>
-    <p>Enjoy: Serve hot, with additional salt and pepper if needed.</p>
-  </section>
-  <section>
-    <p>Nutrition</p>
-    <p>The table below shows nutritional values per serving without the additional fillings.
-    </p>
-    <table>
-      <tr>
-        <th></th>
-        <th>Calories</th>
-        <th>Carbs</th>
-        <th>Protein</th>
-        <th>Fat</th>
-      </tr>
-      <tr>
-        <td>277kcal</td>
-        <td>0g</td>
-        <td>20g</td>
-        <td>22g</td>
-      </tr>
-  </section>
-</div>
-  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Shadrack Kimaau</a>.
-  </div> -->
 </body>
 </html>
